--- a/_data/reviews/review-kakoi-samyi-luchshii-sniat-domik-v-novosibirske.yaml
+++ b/_data/reviews/review-kakoi-samyi-luchshii-sniat-domik-v-novosibirske.yaml
@@ -1,8 +1,8 @@
 ---
 _id: 74aac42f4c1151b7c191e7f1e2b1a3065121a6fd
 name: Сергей
-comment: Если хотите купить снять домик в новосибирске , то лучше - <a href="http://bazadryzba.ru/-kottedzh-3-kh-komnatnyi">http://bazadryzba.ru/-kottedzh-3-kh-komnatnyi</a>,
-  варианта не найдёте. И выбор хороший, и менеджеры помогут подобрать подходящий вариант.
+comment: Если хотите снять домик в новосибирске, то лучше - <a href="http://bazadryzba.ru/-kottedzh-3-kh-komnatnyi">http://bazadryzba.ru/-kottedzh-3-kh-komnatnyi</a>,
+  варианта не найдёте. И выбор хороший, и менеджеры помогут подобрать подходящий дом.
 product: kakoi-samyi-luchshii-sniat-domik-v-novosibirske
 date: "2019-09-13"
 ...
